--- a/tos.html
+++ b/tos.html
@@ -1,1 +1,147 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shinobi RPG - Terms of Service (The Ninja Pact)</title>
+    <!-- Load Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Custom Font and Base Styles */
+        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #1a1a1a; /* Dark, almost black background for contrast */
+            color: #d1d5db; /* Light gray text */
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            padding: 2rem 1rem;
+        }
+
+        /* The Scroll Container */
+        .shinobi-scroll {
+            background-color: #f7e6c4; /* Parchment/Tan color */
+            color: #333333; /* Dark text on light background */
+            max-width: 900px;
+            width: 100%;
+            padding: 3rem 2rem;
+            border: 4px solid #a0522d; /* Sienna border for a wooden scroll edge */
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+            line-height: 1.75;
+            text-align: justify;
+            /* Optional: give a slight paper texture */
+            background-image: linear-gradient(rgba(255, 255, 255, 0.1) 1px, transparent 1px);
+            background-size: 100% 25px;
+        }
+        
+        /* Thematic Heading Styles */
+        h1 {
+            color: #cc0000; /* Red-themed primary title */
+            border-bottom: 2px solid #cc0000;
+            padding-bottom: 0.5rem;
+            margin-bottom: 1.5rem;
+            font-size: 2.5rem;
+            font-weight: 800;
+            text-align: center;
+        }
+
+        h2 {
+            color: #4b5563; /* Dark gray for subheadings */
+            font-size: 1.5rem;
+            font-weight: 700;
+            margin-top: 2.5rem;
+            margin-bottom: 1rem;
+            border-bottom: 1px dashed #d1d5db;
+            padding-bottom: 0.25rem;
+        }
+
+        .scroll-footer {
+            margin-top: 3rem;
+            padding-top: 1rem;
+            border-top: 1px solid #a0522d;
+            text-align: center;
+            font-size: 0.875rem;
+            color: #555;
+        }
+
+        .notice {
+            background-color: #fff3c9;
+            border-left: 5px solid #a0522d;
+            padding: 1rem;
+            margin-bottom: 1.5rem;
+            font-style: italic;
+        }
+
+        a {
+            color: #007bff;
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="shinobi-scroll rounded-lg shadow-xl">
+        <!-- Main Title -->
+        <h1>The Shinobi Pact (Terms of Service)</h1>
+        <p class="text-center text-sm mb-6">Last Updated: September 28, 2025</p>
+
+        <div class="notice">
+            <p><strong>IMPORTANT NOTICE:</strong> By invoking the **Shinobi RPG** bot (the "Bot") on Discord, you are signifying your full understanding and acceptance of these Terms and Conditions. If you do not agree to the terms of this ancient pact, you must cease all interaction with the Bot immediately.</p>
+        </div>
+
+        <!-- 1. The Ninja's Pact: Acceptance of Terms -->
+        <h2>1. The Ninja's Pact: Acceptance of Terms</h2>
+        <p>This Pact is an agreement between you, the user (referred to as the "Shinobi"), and the Bot's creators/operators (referred to as the "Kage"). This agreement governs your access to and use of the **Shinobi RPG** Discord bot and its related services (the "Service"). Your initial use of the Bot constitutes an unbreakable commitment to follow this Pact and all rules set forth by associated server administrators.</p>
+
+        <!-- 2. License to Use the Bot -->
+        <h2>2. Scroll of Allegiance: License to Use the Bot</h2>
+        <p>The Kage grants the Shinobi a limited, revocable, non-exclusive, non-transferable, and non-sublicensable license to utilize the Bot for non-commercial, entertainment, and personal use within the Discord platform. This license is strictly contingent upon your continuous compliance with this Pact. The Bot is provided for enjoyment and gameplay inspired by **Konoha RPG**, acknowledging its legacy.</p>
+
+        <!-- 3. The Hidden Scrolls: Data and Privacy Policy -->
+        <h2>3. The Hidden Scrolls: Data and Privacy</h2>
+        <p>The Bot requires the storage of certain data to enable core gameplay and moderation. By using the Bot, you acknowledge and agree to the collection and storage of:</p>
+        <ul class="list-disc ml-6 mt-2 mb-4">
+            <li><strong>User Identifiers:</strong> Your unique Discord User ID (required for storing your character, inventory, and progress).</li>
+            <li><strong>Gameplay Data:</strong> Your level, stats, currency, items, and historical progress within the RPG system.</li>
+        </ul>
+        <p>The collection of this data is solely for the operation of the Bot. For a comprehensive explanation of how your data is handled, please review the separate **Privacy Policy** (which you will need to create next) at: <a href="[Your-Privacy-Policy-Link-Here]" target="_blank">[Your-Privacy-Policy-Link-Here]</a>.</p>
+
+        <!-- 4. Forbidden Jutsu & Prohibited Actions -->
+        <h2>4. Forbidden Jutsu & Prohibited Actions (The Forbidden List)</h2>
+        <p>The Shinobi must not engage in any activity that corrupts the balance of the Service. Prohibited conduct includes, but is not limited to, the following:</p>
+        <ul class="list-disc ml-6 mt-2 mb-4">
+            <li><strong>Exploitation:</strong> Knowingly using, sharing, or benefiting from any bugs, glitches, or exploits that grant an unfair advantage. All issues must be reported immediately to the Kage/administrators.</li>
+            <li><strong>Automation:</strong> Using any unauthorized third-party scripts, programs, or automation tools (commonly known as "botting") to interact with the Bot.</li>
+            <li><strong>Spamming:</strong> Excessive or repetitive use of Bot commands that disrupts the experience for other users or strains the Bot's infrastructure.</li>
+            <li><strong>Harassment:</strong> Using the Bot to promote, facilitate, or engage in harassment, discrimination, or abusive conduct toward other users or server staff.</li>
+            <li><strong>Unauthorized Access:</strong> Attempting to gain unauthorized access to the Bot's source code, data files, or server infrastructure.</li>
+        </ul>
+        <p>Violation of any Forbidden Jutsu may result in immediate and permanent termination of your access to the Service.</p>
+
+        <!-- 5. The Shinobi's Oath: Limitations of Liability -->
+        <h2>5. The Shinobi's Oath: Limitations of Liability</h2>
+        <p>The Service is provided on an "as is" and "as available" basis. The Kage makes no warranties, express or implied, regarding the reliability or functionality of the Bot.</p>
+        <p>The Kage shall not be liable for any direct, indirect, incidental, special, or consequential damages resulting from:</p>
+        <ul class="list-disc ml-6 mt-2">
+            <li>The use or inability to use the Bot.</li>
+            <li>Any unauthorized access to or alteration of your transmissions or data.</li>
+            <li>Losses incurred due to a third-party service, such as the loss of an account due to disciplinary action taken by Discord.</li>
+        </ul>
+        <p>By using the Bot, you assume all risk and responsibility for any use of the Bot, including the potential for **Discord ID bans**, **loss of in-game currency/progress**, or **data loss**.</p>
+        
+        <!-- 6. The Last Seal: Account Termination -->
+        <h2>6. The Last Seal: Account Termination</h2>
+        <p>The Kage reserves the right to suspend or terminate your access to the Service, without prior notice or liability, for any reason whatsoever, including without limitation, a breach of these Terms. Upon termination, your right to use the Bot will immediately cease. Sections related to Prohibited Actions and Limitations of Liability shall survive termination.</p>
+
+        <!-- 7. Changes to the Pact -->
+        <h2>7. Amendments to the Scroll</h2>
+        <p>The Kage reserves the right, at our sole discretion, to modify or replace these Terms at any time. When a revision is material, we will try to provide at least 7 days' notice before any new terms take effect. By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. The current version will always be available at this link.</p>
+
+
+        <div class="scroll-footer">
+            <p>&copy; 2025 Shinobi RPG Bot. All rights reserved. | Inspired by Konoha RPG.</p>
+        </div>
+    </div>
+</body>
+</html>
+
