--- a/tos.html
+++ b/tos.html
@@ -86,19 +86,23 @@
         <p class="text-center text-sm mb-6">Last Updated: September 28, 2025</p>
 
         <div class="notice">
-            <p><strong>IMPORTANT NOTICE:</strong> By invoking the **Shinobi RPG** bot (the "Bot") on Discord, you are signifying your full understanding and acceptance of these Terms and Conditions. If you do not agree to the terms of this ancient pact, you must cease all interaction with the Bot immediately.</p>
+            <p><strong>IMPORTANT NOTICE:</strong> By using the **Shinobi RPG** bot (the "Bot") on Discord, you are signifying your full understanding and acceptance of these Terms and Conditions. If you do not agree to the terms, you must stop all interaction with the Bot immediately.</p>
         </div>
 
         <!-- 1. The Ninja's Pact: Acceptance of Terms -->
         <h2>1. The Ninja's Pact: Acceptance of Terms</h2>
         <p>This Pact is an agreement between you, the user (referred to as the "Shinobi"), and the Bot's creators/operators (referred to as the "Kage"). This agreement governs your access to and use of the **Shinobi RPG** Discord bot and its related services (the "Service"). Your initial use of the Bot constitutes an unbreakable commitment to follow this Pact and all rules set forth by associated server administrators.</p>
 
-        <!-- 2. License to Use the Bot -->
-        <h2>2. Scroll of Allegiance: License to Use the Bot</h2>
+        <!-- 2. Disclaimer of Affiliation -->
+        <h2>2. Disclaimer of Affiliation (A Note on Inspiration)</h2>
+        <p>The **Shinobi RPG** bot is a non-commercial, fan-made project inspired by the concepts and themes of the "Naruto" anime and manga series. The Kage has **no ties, affiliation, or endorsement** from the original creators, including Masashi Kishimoto, Shueisha, Pierrot, or any of their production units or licensors whatsoever. All related intellectual property, including character names, settings, and designs, are the property of their respective copyright holders. This Bot is provided as an homage for entertainment purposes only.</p>
+
+        <!-- 3. License to Use the Bot (formerly 2) -->
+        <h2>3. Scroll of Allegiance: License to Use the Bot</h2>
         <p>The Kage grants the Shinobi a limited, revocable, non-exclusive, non-transferable, and non-sublicensable license to utilize the Bot for non-commercial, entertainment, and personal use within the Discord platform. This license is strictly contingent upon your continuous compliance with this Pact. The Bot is provided for enjoyment and gameplay inspired by **Konoha RPG**, acknowledging its legacy.</p>
 
-        <!-- 3. The Hidden Scrolls: Data and Privacy Policy -->
-        <h2>3. The Hidden Scrolls: Data and Privacy</h2>
+        <!-- 4. The Hidden Scrolls: Data and Privacy Policy (formerly 3) -->
+        <h2>4. The Hidden Scrolls: Data and Privacy</h2>
         <p>The Bot requires the storage of certain data to enable core gameplay and moderation. By using the Bot, you acknowledge and agree to the collection and storage of:</p>
         <ul class="list-disc ml-6 mt-2 mb-4">
             <li><strong>User Identifiers:</strong> Your unique Discord User ID (required for storing your character, inventory, and progress).</li>
@@ -106,8 +110,16 @@
         </ul>
         <p>The collection of this data is solely for the operation of the Bot. For a comprehensive explanation of how your data is handled, please review the separate **Privacy Policy** (which you will need to create next) at: <a href="[Your-Privacy-Policy-Link-Here]" target="_blank">[Your-Privacy-Policy-Link-Here]</a>.</p>
 
-        <!-- 4. Forbidden Jutsu & Prohibited Actions -->
-        <h2>4. Forbidden Jutsu & Prohibited Actions (The Forbidden List)</h2>
+        <!-- 5. Artificial Intelligence and You (New Section) -->
+        <h2>5. The Oracle's Guidance: Use of Artificial Intelligence</h2>
+        <p>The Bot includes a built-in AI companion that you can interact with by mentioning it. This AI service is provided via Google's **Gemini 2.5 Flash Lite** model. By interacting with this feature, you acknowledge and accept the following:</p>
+        <ul class="list-disc ml-6 mt-2 mb-4">
+            <li><strong>User Responsibility:</strong> You are solely responsible for all content, including prompts and inputs, you send to the AI. All generated content is for entertainment purposes only.</li>
+            <li><strong>No Liability:</strong> The Bot's creators are not liable for any messages, content, or actions produced by the AI. We make no guarantees regarding the AI's accuracy, safety, or appropriateness.</li>
+        </ul>
+
+        <!-- 6. Forbidden Jutsu & Prohibited Actions (formerly 4) -->
+        <h2>6. Forbidden Jutsu & Prohibited Actions (The Forbidden List)</h2>
         <p>The Shinobi must not engage in any activity that corrupts the balance of the Service. Prohibited conduct includes, but is not limited to, the following:</p>
         <ul class="list-disc ml-6 mt-2 mb-4">
             <li><strong>Exploitation:</strong> Knowingly using, sharing, or benefiting from any bugs, glitches, or exploits that grant an unfair advantage. All issues must be reported immediately to the Kage/administrators.</li>
@@ -118,24 +130,25 @@
         </ul>
         <p>Violation of any Forbidden Jutsu may result in immediate and permanent termination of your access to the Service.</p>
 
-        <!-- 5. The Shinobi's Oath: Limitations of Liability -->
-        <h2>5. The Shinobi's Oath: Limitations of Liability</h2>
+        <!-- 7. The Shinobi's Oath: Limitations of Liability (formerly 5) -->
+        <h2>7. The Shinobi's Oath: Limitations of Liability</h2>
         <p>The Service is provided on an "as is" and "as available" basis. The Kage makes no warranties, express or implied, regarding the reliability or functionality of the Bot.</p>
         <p>The Kage shall not be liable for any direct, indirect, incidental, special, or consequential damages resulting from:</p>
         <ul class="list-disc ml-6 mt-2">
             <li>The use or inability to use the Bot.</li>
             <li>Any unauthorized access to or alteration of your transmissions or data.</li>
             <li>Losses incurred due to a third-party service, such as the loss of an account due to disciplinary action taken by Discord.</li>
+            <li>**Data Restoration (Courtesy):** In the event of an accidental loss of player data, the owner or officials of the Bot may, **at our sole discretion and as a courtesy**, attempt to manually restore your data. This courtesy is strictly contingent upon the user supplying **sufficient and verifiable proof** of the lost data. The provision of such proof does not obligate the Kage to successfully restore the data.</li>
         </ul>
         <p>By using the Bot, you assume all risk and responsibility for any use of the Bot, including the potential for **Discord ID bans**, **loss of in-game currency/progress**, or **data loss**.</p>
         
-        <!-- 6. The Last Seal: Account Termination -->
-        <h2>6. The Last Seal: Account Termination</h2>
+        <!-- 8. The Last Seal: Account Termination (formerly 6) -->
+        <h2>8. The Last Seal: Account Termination</h2>
         <p>The Kage reserves the right to suspend or terminate your access to the Service, without prior notice or liability, for any reason whatsoever, including without limitation, a breach of these Terms. Upon termination, your right to use the Bot will immediately cease. Sections related to Prohibited Actions and Limitations of Liability shall survive termination.</p>
 
-        <!-- 7. Changes to the Pact -->
-        <h2>7. Amendments to the Scroll</h2>
-        <p>The Kage reserves the right, at our sole discretion, to modify or replace these Terms at any time. When a revision is material, we will try to provide at least 7 days' notice before any new terms take effect. By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. The current version will always be available at this link.</p>
+        <!-- 9. Changes to the Pact (formerly 7) -->
+        <h2>9. Amendments to the Scroll</h2>
+        <p>The Kage (the owner) reserves the right, at our sole discretion, to modify or replace these Terms at any time. When a revision is material, we will try to provide at least 7 days' notice before any new terms take effect. By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. The current version will always be available at this link.</p>
 
 
         <div class="scroll-footer">
@@ -144,4 +157,3 @@
     </div>
 </body>
 </html>
-
