--- a/tos.html
+++ b/tos.html
@@ -108,7 +108,7 @@
             <li><strong>User Identifiers:</strong> Your unique Discord User ID (required for storing your character, inventory, and progress).</li>
             <li><strong>Gameplay Data:</strong> Your level, stats, currency, items, and historical progress within the RPG system.</li>
         </ul>
-        <p>The collection of this data is solely for the operation of the Bot. For a comprehensive explanation of how your data is handled, please review the separate **Privacy Policy** (which you will need to create next) at: <a href="[Your-Privacy-Policy-Link-Here]" target="_blank">[Your-Privacy-Policy-Link-Here]</a>.</p>
+        <p>The collection of this data is solely for the operation of the Bot. For a comprehensive explanation of how your data is handled, please review the separate **Privacy Policy** (which you will need to create next) at: <a href="[https://birbybirb.github.io/tos-and-pp/pp.html]" target="_blank">[Your-Privacy-Policy-Link-Here]</a>.</p>
 
         <!-- 5. Artificial Intelligence and You (New Section) -->
         <h2>5. The Oracle's Guidance: Use of Artificial Intelligence</h2>
@@ -152,7 +152,7 @@
 
 
         <div class="scroll-footer">
-            <p>&copy; 2025 Shinobi RPG Bot. All rights reserved. | Inspired by Konoha RPG.</p>
+            <p>&copy; 2025 Shinobi RPG Bot. All rights reserved.</p>
         </div>
     </div>
 </body>
