--- a/pp.html
+++ b/pp.html
@@ -86,7 +86,7 @@
         <p class="text-center text-sm mb-6">Last Updated: September 28, 2025</p>
 
         <div class="notice">
-            <p><strong>MISSION BRIEFING:</strong> This document outlines what information the **Shinobi RPG** bot (the "Bot") collects from you, the user (the "Shinobi"), why it is collected, and how it is used. Our Kage (owner) is committed to protecting your privacy.</p>
+            <p><strong>BRIEF:</strong> This document outlines what information the **Shinobi RPG** bot (the "Bot") collects from you, the user (the "Shinobi"), why it is collected, and how it is used. Our Kage (owner) is committed to protecting your privacy.</p>
         </div>
 
         <!-- 1. Data Collected and Purpose -->
