--- a/pp.html
+++ b/pp.html
@@ -122,7 +122,7 @@
             <li>To generate and display leaderboards.</li>
             <li>To enforce the rules outlined in the **Shinobi Pact (Terms of Service)**.</li>
         </ul>
-        <p class="font-semibold text-red-700 mt-4">We do not sell, rent, or trade your data. We do not use your data for marketing, profiling, or advertising purposes.</p>
+        <p class="font-semibold text-red-700 mt-4">IMPORTANT: We do not sell, rent, or trade your data. We do not use your data for marketing, profiling, or advertising purposes.</p>
 
         <!-- 3. Third-Party Interactions (AI Model) -->
         <h2>3. Third-Party Intelligence: The Gemini AI Model</h2>
@@ -158,7 +158,7 @@
 
 
         <div class="scroll-footer">
-            <p>&copy; 2025 Shinobi RPG Bot. All rights reserved. | For support or data requests, please contact us at our official server https://discord.gg/gCcEksvubb</p>
+            <p>&copy; 2025 Shinobi RPG Bot. All rights reserved. | For support or data requests, please contact us at our official server </a>https://discord.gg/gCcEksvubb</p>
         </div>
     </div>
 </body>
