--- a/pp.html
+++ b/pp.html
@@ -146,7 +146,7 @@
         <p>As a Shinobi, you maintain the right to control your data:</p>
         <ul class="list-disc ml-6 mt-2 mb-4">
             <li><strong>Right to Deletion:</strong> You have the right to request the deletion of all your stored gameplay data.
-                <p class="text-sm italic ml-4"><strong>Procedure:</strong> To request data deletion, you must contact the Kage (owner) or an authorized Bot administrator via [Your Support Server Link or Contact Method]. Upon verifiable request, your data will be permanently deleted from our database. Note that deleting your data means **you will lose all game progress, items, and stats**.</p>
+                <p class="text-sm italic ml-4"><strong>Procedure:</strong> To request data deletion, you must contact the Kage (owner) or an authorized Bot administrator via our official server whose link is provided at the end. Upon verifiable request, your data will be permanently deleted from our database. Note that deleting your data means **you will lose all game progress, items, and stats**.</p>
             </li>
             <li><strong>Right to Access:</strong> You can request a copy of the specific data we hold about your account.</li>
             <li><strong>Deletion of Discord Account:</strong> If you delete your Discord account, the link between your data and your Discord profile will be severed. We will not be able to identify your data, but the data may remain in our database until a manual cleanup process is run or a deletion request is filed for the orphaned data.</li>
@@ -158,7 +158,7 @@
 
 
         <div class="scroll-footer">
-            <p>&copy; 2025 Shinobi RPG Bot. All rights reserved. | For support or data requests, please contact us at our official server </a>https://discord.gg/gCcEksvubb</p>
+            <p>&copy; 2025 Shinobi RPG Bot. All rights reserved. | For support or data requests, please contact us at our official server  <a href="https://discord.gg/gCcEksvubb" target="_blank">[Shinobi RPG Official Discord Server.]</a></p>
         </div>
     </div>
 </body>
